@@ -29,13 +29,19 @@ import java.util.Set;
 
 import org.olat.basesecurity.BaseSecurity;
 import org.olat.basesecurity.BaseSecurityModule;
+import org.olat.basesecurity.GroupRoles;
+import org.olat.basesecurity.IdentityPowerSearchQueries;
+import org.olat.basesecurity.OrganisationRoles;
+import org.olat.basesecurity.OrganisationService;
+import org.olat.basesecurity.SearchIdentityParams;
 import org.olat.basesecurity.events.SingleIdentityChosenEvent;
 import org.olat.core.gui.UserRequest;
-import org.olat.core.gui.Windows;
 import org.olat.core.gui.components.Component;
 import org.olat.core.gui.components.form.flexible.FormItem;
 import org.olat.core.gui.components.form.flexible.FormItemContainer;
-import org.olat.core.gui.components.form.flexible.elements.*;
+import org.olat.core.gui.components.form.flexible.elements.FlexiTableElement;
+import org.olat.core.gui.components.form.flexible.elements.FormLink;
+import org.olat.core.gui.components.form.flexible.elements.TextElement;
 import org.olat.core.gui.components.form.flexible.impl.Form;
 import org.olat.core.gui.components.form.flexible.impl.FormEvent;
 import org.olat.core.gui.components.form.flexible.impl.FormLayoutContainer;
@@ -52,9 +58,11 @@ import org.olat.core.gui.control.generic.ajax.autocompletion.ListProvider;
 import org.olat.core.gui.control.winmgr.ScrollTopCommand;
 import org.olat.core.gui.translator.Translator;
 import org.olat.core.id.Identity;
+import org.olat.core.id.Organisation;
 import org.olat.core.id.Roles;
 import org.olat.core.id.UserConstants;
 import org.olat.core.util.StringHelper;
+import org.olat.core.util.UserSession;
 import org.olat.core.util.Util;
 import org.olat.user.UserManager;
 import org.olat.user.propertyhandlers.EmailProperty;
@@ -65,25 +73,17 @@ import org.springframework.beans.factory.annotation.Autowired;
 /**
  * Initial Date:  Jul 29, 2003
  *
- * @author Felix Jost, Florian Gnaegi
- * @author srosse, stephane.rosse@frentix.com, http://www.frentix.com
  * 
- * <pre>
  * Comment:  
  * Subworkflow that allows the user to search for a user and choose the user from 
  * the list of users that match the search criteria. Users can be searched by
  * <ul>
- * <li />
- * Username
- * <li />
- * First name
- * <li />
- * Last name
- * <li />
- * Email address
+ *  <li>Username
+ *  <li>First name
+ *  <li>Last name
+ *  <li>Email address
  * </ul>
  * 
- * </pre>
  * 
  * Events:<br>
  *         Fires a SingleIdentityChoosenEvent when an identity has been chosen
@@ -93,6 +93,10 @@ import org.springframework.beans.factory.annotation.Autowired;
  *         <p>
  *         Optionally set the useMultiSelect boolean to true which allows to
  *         select multiple identities from within the search results.
+ *         
+ *         
+ * @author Felix Jost, Florian Gnaegi
+ * @author srosse, stephane.rosse@frentix.com, http://www.frentix.com
  */
 public class UserSearchFlexiController extends FlexiAutoCompleterController {
 
@@ -104,10 +108,11 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 	private FlexiTableElement tableEl;
 	private UserSearchFlexiTableModel userTableModel;
 	private FormLayoutContainer autoCompleterContainer;
-	private FormLayoutContainer searchFormContainer;
 	
 	private final boolean isAdministrativeUser;
 	private final List<UserPropertyHandler> userSearchFormPropertyHandlers;
+	private final List<Organisation> searchableOrganisations;
+	private final GroupRoles repositoryEntryRole;
 
 	@Autowired
 	private UserManager userManager;
@@ -115,15 +120,16 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 	private BaseSecurity securityManager;
 	@Autowired
 	private BaseSecurityModule securityModule;
+	@Autowired
+	private OrganisationService organisationService;
+	@Autowired
+	private IdentityPowerSearchQueries identitySearchQueries;
 
-	/**
-	 * @param ureq
-	 * @param wControl
-	 * @param cancelbutton
-	 * @param userMultiSelect
-	 * @param statusEnabled
-	 */
 	public UserSearchFlexiController(UserRequest ureq, WindowControl wControl, Form rootForm) {
+		this(ureq, wControl, rootForm, null);
+	}
+	
+	public UserSearchFlexiController(UserRequest ureq, WindowControl wControl, Form rootForm, GroupRoles repositoryEntryRole) {
 		super(ureq, wControl, LAYOUT_CUSTOM, "usersearchext", rootForm);
 		setTranslator(Util.createPackageTranslator(UserPropertyHandler.class, getLocale(), getTranslator()));
 		setTranslator(Util.createPackageTranslator(UserSearchFlexiController.class, getLocale(), getTranslator()));
@@ -131,8 +137,13 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 		Roles roles = ureq.getUserSession().getRoles();
 		isAdministrativeUser = securityModule.isUserAllowedAdminProps(roles);
 		userSearchFormPropertyHandlers = userManager.getUserPropertyHandlersFor(UserSearchForm.class.getCanonicalName(), isAdministrativeUser);
+		
+		UserSession usess = ureq.getUserSession();
+		searchableOrganisations = organisationService.getOrganisations(getIdentity(), usess.getRoles(),
+				OrganisationRoles.valuesWithoutGuestAndInvitee());
+		this.repositoryEntryRole = repositoryEntryRole;
 
-		ListProvider provider = new UserSearchListProvider();
+		ListProvider provider = new UserSearchListProvider(searchableOrganisations, repositoryEntryRole);
 		setListProvider(provider);
 		setAllowNewValues(false);
 
@@ -147,8 +158,7 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 			// insert a autocompleter search
 			Roles roles = ureq.getUserSession().getRoles();
 			boolean autoCompleteAllowed = securityModule.isUserAllowedAutoComplete(roles);
-			boolean ajax = Windows.getWindows(ureq).getWindowManager().isAjaxEnabled();
-			if (ajax && autoCompleteAllowed) {
+			if (autoCompleteAllowed) {
 				//auto complete
 				String velocityAutoCRoot = Util.getPackageVelocityRoot(FlexiAutoCompleterController.class);
 				String autoCPage = velocityAutoCRoot + "/autocomplete.html";
@@ -163,7 +173,7 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 			backLink = uifactory.addFormLink("btn.back", formLayout);
 			backLink.setIconLeftCSS("o_icon o_icon_back");
 
-			searchFormContainer = FormLayoutContainer.createDefaultFormLayout("usersearchPanel", getTranslator());
+			FormLayoutContainer searchFormContainer = FormLayoutContainer.createDefaultFormLayout("usersearchPanel", getTranslator());
 			searchFormContainer.setRootForm(mainForm);
 			searchFormContainer.setElementCssClass("o_sel_usersearch_searchform");
 			searchFormContainer.setFormTitle(translate("header.normal"));
@@ -239,7 +249,7 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 
 	@Override
 	public void event(UserRequest ureq, Component source, Event event) {
-		if (source == backLink) {				
+		if (source == backLink) {
 			flc.contextPut("showButton","false");
 		} else if(autoCompleterContainer != null && source == autoCompleterContainer.getComponent()) {
 			if (event.getCommand().equals(COMMAND_SELECT)) {
@@ -263,12 +273,12 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 						List<Identity> selectedIdentities = Collections.singletonList(chosenIdent);
 						userTableModel.setObjects(selectedIdentities);
 						Set<Integer> selectedIndex = new HashSet<>();
-						selectedIndex.add(new Integer(0));
+						selectedIndex.add(Integer.valueOf(0));
 						tableEl.setMultiSelectedIndex(selectedIndex);
 					}
 				}
 			} catch (NumberFormatException e) {
-				getWindowControl().setWarning(translate("error.no.user.found"));								
+				getWindowControl().setWarning(translate("error.no.user.found"));
 			}
 		} else {
 			getWindowControl().setWarning(translate("error.search.form.notempty"));
@@ -282,13 +292,14 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 	
 	private boolean validateForm(UserRequest ureq) {
 		// override for sys admins
-		if (ureq.getUserSession() != null && ureq.getUserSession().getRoles() != null
-				&& ureq.getUserSession().getRoles().isOLATAdmin()) {
+		UserSession usess = ureq.getUserSession();
+		if (usess != null && usess.getRoles() != null
+				&& (usess.getRoles().isAdministrator() || usess.getRoles().isRolesManager())) {
 			return true;
 		}
 		
 		boolean filled = !loginEl.isEmpty();
-		StringBuilder  full = new StringBuilder(loginEl.getValue().trim());  
+		StringBuilder  full = new StringBuilder(loginEl.getValue().trim());
 		FormItem lastFormElement = loginEl;
 		
 		// DO NOT validate each user field => see OLAT-3324
@@ -303,9 +314,6 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 			if (StringHelper.containsNonWhitespace(uiValue)) {
 				full.append(uiValue.trim());
 				filled = true;
-			} else {
-				//its an empty field
-				filled = filled || false;
 			}
 
 			lastFormElement = ui;
@@ -325,7 +333,7 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 			lastFormElement.setErrorKey("error.search.form.no.wildcard.dublicates", null);
 			return false;
 		}		
-		if ( fullString.length() < 4) {
+		if (fullString.length() < 4) {
 			lastFormElement.setErrorKey("error.search.form.to.short", null);
 			return false;
 		}
@@ -436,9 +444,6 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 		}
 	}
 
-	/**
-	 * @see org.olat.core.gui.control.DefaultController#doDispose(boolean)
-	 */
 	@Override
 	protected void doDispose() {
 		// Child controllers auto-disposed by basic controller
@@ -451,9 +456,11 @@ public class UserSearchFlexiController extends FlexiAutoCompleterController {
 	 * @return
 	 */
 	private List<Identity> searchUsers(String login, Map<String, String> userPropertiesSearch, boolean userPropertiesAsIntersectionSearch) {
-	  return securityManager.getVisibleIdentitiesByPowerSearch(
-			(login.equals("") ? null : login),
-			userPropertiesSearch, userPropertiesAsIntersectionSearch,	// in normal search fields are intersected
-			null, null, null, null, null);
+		SearchIdentityParams params = new SearchIdentityParams(login,
+				userPropertiesSearch, userPropertiesAsIntersectionSearch, null, 
+				null, null, null, null, null, Identity.STATUS_VISIBLE_LIMIT);
+		params.setOrganisations(searchableOrganisations);
+		params.setRepositoryEntryRole(repositoryEntryRole, false);
+		return identitySearchQueries.getIdentitiesByPowerSearch(params, 0, -1);
 	}
 }
