@@ -29,25 +29,30 @@ import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.persistence.TemporalType;
 
 import org.olat.admin.user.delete.SelectionController;
 import org.olat.basesecurity.BaseSecurity;
 import org.olat.basesecurity.IdentityImpl;
+import org.olat.basesecurity.OrganisationRoles;
 import org.olat.basesecurity.manager.GroupDAO;
+import org.olat.commons.lifecycle.LifeCycleEntry;
 import org.olat.commons.lifecycle.LifeCycleManager;
 import org.olat.core.CoreSpringFactory;
 import org.olat.core.commons.persistence.DB;
-import org.olat.core.commons.persistence.DBFactory;
-import org.olat.core.commons.persistence.DBQuery;
 import org.olat.core.gui.translator.Translator;
 import org.olat.core.id.Identity;
+import org.olat.core.id.OrganisationRef;
 import org.olat.core.id.UserConstants;
-import org.olat.core.manager.BasicManager;
+import org.apache.logging.log4j.Logger;
+import org.olat.core.logging.Tracing;
 import org.olat.core.util.Util;
 import org.olat.core.util.i18n.I18nManager;
 import org.olat.core.util.mail.MailBundle;
@@ -73,7 +78,9 @@ import org.springframework.stereotype.Service;
  * @author Christian Guretzki
  */
 @Service("userDeletionManager")
-public class UserDeletionManager extends BasicManager {
+public class UserDeletionManager {
+	
+	private static final Logger log = Tracing.createLoggerFor(UserDeletionManager.class);
 
 	/** Default value for last-login duration in month. */
 	private static final int DEFAULT_LAST_LOGIN_DURATION = 24;
@@ -82,8 +89,6 @@ public class UserDeletionManager extends BasicManager {
 	private static final String LAST_LOGIN_DURATION_PROPERTY_NAME = "LastLoginDuration";
 	private static final String DELETE_EMAIL_DURATION_PROPERTY_NAME = "DeleteEmailDuration";
 	private static final String PROPERTY_CATEGORY = "UserDeletion";
-
-	private static UserDeletionManager INSTANCE;
 	public static final String SEND_DELETE_EMAIL_ACTION = "sendDeleteEmail";
 	private static final String USER_DELETED_ACTION = "userdeleted";
 
@@ -102,17 +107,6 @@ public class UserDeletionManager extends BasicManager {
 	@Autowired
 	private DB dbInstance;
 
-	/**
-	 * [used by spring]
-	 */
-	private UserDeletionManager() {
-		INSTANCE = this;
-	}
-
-	/**
-	 * @return Singleton.
-	 */
-	public static UserDeletionManager getInstance() { return INSTANCE; }
 
 	/**
 	 * Send 'delete'- emails to a list of identities. The delete email is an announcement for the user-deletion.
@@ -135,7 +129,7 @@ public class UserDeletionManager extends BasicManager {
 					template.setBodyTemplate(identityTranslator.translate(keyEmailBody));
 				}
 				template.putVariablesInMailContext(template.getContext(), identity);
-				logDebug(" Try to send Delete-email to identity=" + identity.getKey() + " with email=" + identity.getUser().getProperty(UserConstants.EMAIL, null));
+				log.debug(" Try to send Delete-email to identity=" + identity.getKey() + " with email=" + identity.getUser().getProperty(UserConstants.EMAIL, null));
 
 				MailerResult result = new MailerResult();
 				MailBundle bundle = mailManager.makeMailBundle(null, identity, template, null, null, result);
@@ -152,14 +146,14 @@ public class UserDeletionManager extends BasicManager {
 				if (result.getReturnCode() != MailerResult.OK) {
 					buf.append(pT.translate("email.error.send.failed", new String[] {identity.getUser().getProperty(UserConstants.EMAIL, null), identity.getName()} )).append("\n");
 				}
-				logAudit("User-Deletion: Delete-email send to identity=" + identity.getKey() + " with email=" + identity.getUser().getProperty(UserConstants.EMAIL, null));
+				log.info(Tracing.M_AUDIT, "User-Deletion: Delete-email send to identity=" + identity.getKey() + " with email=" + identity.getUser().getProperty(UserConstants.EMAIL, null));
 				markSendEmailEvent(identity);
 			}
 		} else {
 			// no template => User decides to sending no delete-email, mark only in lifecycle table 'sendEmail'
 			for (Iterator<Identity> iter = selectedIdentities.iterator(); iter.hasNext();) {
 				Identity identity = iter.next();
-				logAudit("User-Deletion: Move in 'Email sent' section without sending email, identity=" + identity.getKey());
+				log.info(Tracing.M_AUDIT, "User-Deletion: Move in 'Email sent' section without sending email, identity=" + identity.getKey());
 				markSendEmailEvent(identity);
 			}
 		}
@@ -176,31 +170,44 @@ public class UserDeletionManager extends BasicManager {
 	 * @param lastLoginDuration  last-login duration in month
 	 * @return List of Identity objects
 	 */
-	public List<Identity> getDeletableIdentities(int lastLoginDuration) {
+	public List<Identity> getDeletableIdentities(int lastLoginDuration, List<OrganisationRef> organisations) {
+		List<Long> organisationKeys = organisations.stream().map(OrganisationRef::getKey).collect(Collectors.toList());
+		
 		Calendar lastLoginLimit = Calendar.getInstance();
 		lastLoginLimit.add(Calendar.MONTH, - lastLoginDuration);
-		logDebug("lastLoginLimit=" + lastLoginLimit);
+		log.debug("lastLoginLimit=" + lastLoginLimit);
 		// 1. get all 'active' identities with lastlogin > x
-		StringBuilder sb = new StringBuilder();
+		StringBuilder sb = new StringBuilder(512);
 		sb.append("select ident from ").append(IdentityImpl.class.getName()).append(" as ident")
 		  .append(" inner join fetch ident.user as user")
-		  .append(" where ident.status=").append(Identity.STATUS_ACTIV).append(" and (ident.lastLogin = null or ident.lastLogin < :lastLogin)");
+		  .append(" where ident.status=").append(Identity.STATUS_ACTIV).append(" and ((ident.lastLogin = null and ident.creationDate < :lastLogin) or ident.lastLogin < :lastLogin)")
+		  .append(" and exists (select orgtomember.key from bgroupmember as orgtomember ")
+		  .append("  inner join organisation as org on (org.group.key=orgtomember.group.key)")
+		  .append("  where orgtomember.identity.key=ident.key and org.key in (:organisationKeys) and orgtomember.role='").append(OrganisationRoles.user).append("')");
+
 		List<Identity> identities = dbInstance.getCurrentEntityManager()
 				.createQuery(sb.toString(), Identity.class)
 				.setParameter("lastLogin", lastLoginLimit.getTime(), TemporalType.TIMESTAMP)
+				.setParameter("organisationKeys", organisationKeys)
 				.getResultList();
 
-		// 2. get all 'active' identities in deletion process
-		String queryStr = "select ident from org.olat.core.id.Identity as ident"
-			+ " , org.olat.commons.lifecycle.LifeCycleEntry as le"
-			+ " where ident.key = le.persistentRef "
-			+ " and le.persistentTypeName ='" + IdentityImpl.class.getName() + "'"
-			+ " and le.action ='" + SEND_DELETE_EMAIL_ACTION + "' ";
-		DBQuery dbq = DBFactory.getInstance().createQuery(queryStr);
-		List<Identity> identitiesInProcess = dbq.list();
-		// 3. Remove all identities in deletion-process from all inactive-identities
-		identities.removeAll(identitiesInProcess);
-		return identities;
+		// 2. get all 'active' identities in deletion process to remove from 1.
+		StringBuilder sc = new StringBuilder(512);
+		sc.append("select le.persistentRef from ").append(LifeCycleEntry.class.getName()).append(" as le")
+		  .append(" where le.persistentTypeName ='").append(IdentityImpl.class.getName()).append("'")
+		  .append(" and le.action ='").append(SEND_DELETE_EMAIL_ACTION).append("'");
+		List<Long> identitiesInProcess = dbInstance.getCurrentEntityManager()
+				.createQuery(sc.toString(), Long.class)
+				.getResultList();
+		
+		Set<Long> identitiesInProcessSet = new HashSet<>(identitiesInProcess);
+		List<Identity> deletableIdentities = new ArrayList<>(identities.size());
+		for(Identity identity:identities) {
+			if(!identitiesInProcessSet.contains(identity.getKey())) {
+				deletableIdentities.add(identity);
+			}
+		}
+		return deletableIdentities;
 	}
 
 	/**
@@ -209,19 +216,27 @@ public class UserDeletionManager extends BasicManager {
 	 * @param deleteEmailDuration  Duration of user-deletion-process in days
 	 * @return List of Identity objects
 	 */
-	public List<Identity> getIdentitiesInDeletionProcess(int deleteEmailDuration) {
+	public List<Identity> getIdentitiesInDeletionProcess(int deleteEmailDuration, List<OrganisationRef> organisations) {
+		List<Long> organisationKeys = organisations.stream().map(OrganisationRef::getKey).collect(Collectors.toList());
 		Calendar deleteEmailLimit = Calendar.getInstance();
-		deleteEmailLimit.add(Calendar.DAY_OF_MONTH, - (deleteEmailDuration-1));
-		logDebug("deleteEmailLimit=" + deleteEmailLimit);
-		String queryStr = "select ident from org.olat.core.id.Identity as ident"
-			+ " , org.olat.commons.lifecycle.LifeCycleEntry as le"
-			+ " where ident.key = le.persistentRef "
-			+ " and ident.status = "	+ Identity.STATUS_ACTIV
-			+ " and le.persistentTypeName ='" + IdentityImpl.class.getName() + "'"
-			+ " and le.action ='" + SEND_DELETE_EMAIL_ACTION + "' and le.lcTimestamp >= :deleteEmailDate ";
-		DBQuery dbq = DBFactory.getInstance().createQuery(queryStr);
-		dbq.setDate("deleteEmailDate", deleteEmailLimit.getTime());
-		return dbq.list();
+		deleteEmailLimit.add(Calendar.DAY_OF_MONTH, - (deleteEmailDuration - 1));
+		
+		StringBuilder sb = new StringBuilder(1024);
+		sb.append( "select ident from ").append(IdentityImpl.class.getName()).append(" as ident")
+		  .append(" inner join fetch ident.user identUser")
+		  .append(" inner join ").append(LifeCycleEntry.class.getName()).append(" as le on (ident.key=le.persistentRef)")
+		  .append(" and ident.status=").append(Identity.STATUS_ACTIV)
+		  .append(" and le.persistentTypeName='").append(IdentityImpl.class.getName()).append("'")
+		  .append(" and le.action='").append(SEND_DELETE_EMAIL_ACTION).append("' and le.lcTimestamp>=:deleteEmailDate")
+		  .append(" and exists (select orgtomember.key from bgroupmember as orgtomember ")
+		  .append("  inner join organisation as org on (org.group.key=orgtomember.group.key)")
+		  .append("  where orgtomember.identity.key=ident.key and org.key in (:organisationKeys) and orgtomember.role='").append(OrganisationRoles.user).append("')");
+
+		return dbInstance.getCurrentEntityManager()
+				.createQuery(sb.toString(), Identity.class)
+				.setParameter("deleteEmailDate", deleteEmailLimit.getTime(), TemporalType.TIMESTAMP)
+				.setParameter("organisationKeys", organisationKeys)
+				.getResultList();
 	}
 
 	/**
@@ -230,19 +245,27 @@ public class UserDeletionManager extends BasicManager {
 	 * @param deleteEmailDuration  Duration of user-deletion-process in days
 	 * @return List of Identity objects
 	 */
-	public List<Identity> getIdentitiesReadyToDelete(int deleteEmailDuration) {
+	public List<Identity> getIdentitiesReadyToDelete(int deleteEmailDuration, List<OrganisationRef> organisations) {
+		List<Long> organisationKeys = organisations.stream().map(OrganisationRef::getKey).collect(Collectors.toList());
 		Calendar deleteEmailLimit = Calendar.getInstance();
 		deleteEmailLimit.add(Calendar.DAY_OF_MONTH, - (deleteEmailDuration - 1));
-		logDebug("deleteEmailLimit=" + deleteEmailLimit);
-		String queryStr = "select ident from org.olat.core.id.Identity as ident"
-			+ " , org.olat.commons.lifecycle.LifeCycleEntry as le"
-			+ " where ident.key = le.persistentRef "
-			+ " and ident.status = "	+ Identity.STATUS_ACTIV
-			+ " and le.persistentTypeName ='" + IdentityImpl.class.getName() + "'"
-			+ " and le.action ='" + SEND_DELETE_EMAIL_ACTION + "' and le.lcTimestamp < :deleteEmailDate ";
-		DBQuery dbq = DBFactory.getInstance().createQuery(queryStr);
-		dbq.setDate("deleteEmailDate", deleteEmailLimit.getTime());
-		return dbq.list();
+		
+		StringBuilder sb = new StringBuilder(1024);
+		sb.append("select ident from ").append(IdentityImpl.class.getName()).append(" as ident")
+		  .append(" inner join fetch ident.user identUser")
+		  .append(" inner join ").append(LifeCycleEntry.class.getName()).append(" as le on (ident.key=le.persistentRef)")
+		  .append(" where ident.status=").append(Identity.STATUS_ACTIV)
+		  .append(" and le.persistentTypeName='").append(IdentityImpl.class.getName()).append("'")
+		  .append(" and le.action='").append(SEND_DELETE_EMAIL_ACTION).append("' and le.lcTimestamp<:deleteEmailDate")
+		  .append(" and exists (select orgtomember.key from bgroupmember as orgtomember ")
+		  .append("  inner join organisation as org on (org.group.key=orgtomember.group.key)")
+		  .append("  where orgtomember.identity.key=ident.key and org.key in (:organisationKeys) and orgtomember.role='").append(OrganisationRoles.user).append("')");
+
+		return dbInstance.getCurrentEntityManager()
+				.createQuery(sb.toString(), Identity.class)
+				.setParameter("deleteEmailDate", deleteEmailLimit.getTime(), TemporalType.TIMESTAMP)
+				.setParameter("organisationKeys", organisationKeys)
+				.getResultList();
 	}
 
 	/**
@@ -252,9 +275,9 @@ public class UserDeletionManager extends BasicManager {
 	 * @return true: delete was successful; false: delete could not finish
 	 */
 	public boolean deleteIdentity(Identity identity, Identity doer) {
-		logInfo("Start deleteIdentity for identity=" + identity);		
+		log.info("Start deleteIdentity for identity=" + identity);		
 		if(Identity.STATUS_PERMANENT.equals(identity.getStatus())) {
-			logInfo("Aborted deletion of identity=" + identity + ", identity is flagged as PERMANENT");					
+			log.info("Aborted deletion of identity=" + identity + ", identity is flagged as PERMANENT");					
 			return false;
 		}
 		// Logout user and start with delete process
@@ -274,10 +297,10 @@ public class UserDeletionManager extends BasicManager {
 		Collections.sort(userDataDeletableResources, new UserDataDeletableComparator());
 		for (UserDataDeletable element : userDataDeletableResources) {
 			try {
-				logInfo("UserDataDeletable-Loop for identity::" + identity.getKey() + " and element::" + element.getClass().getSimpleName());
+				log.info("UserDataDeletable-Loop for identity::" + identity.getKey() + " and element::" + element.getClass().getSimpleName());
 				element.deleteUserData(identity, anonymisedIdentityName);				
 			} catch (Exception e) {
-				logError("Error while deleting identity::" + identity.getKey() + " data for and element::"
+				log.error("Error while deleting identity::" + identity.getKey() + " data for and element::"
 						+ element.getClass().getSimpleName()
 						+ ". Aboring delete process, user partially deleted, but not yet marked as deleted", e);
 				dbInstance.rollbackAndCloseSession();
@@ -290,7 +313,7 @@ public class UserDeletionManager extends BasicManager {
 		
 		// Remove identity from all remaining groups and remove roles
 		int count = groupDao.removeMemberships(identity);
-		logInfo("Delete " + count + " group memberships/roles for identity::" + identity.getKey());
+		log.info("Delete " + count + " group memberships/roles for identity::" + identity.getKey());
 
 		// Cleanup lifecycle data
 		LifeCycleManager.createInstanceFor(identity).markTimestampFor(USER_DELETED_ACTION, null);
@@ -301,14 +324,14 @@ public class UserDeletionManager extends BasicManager {
 		// object itself must remain in the database since there are referenced
 		// objects such as undeletable forum entries linked to it
 		identity = securityManager.saveIdentityName(identity, anonymisedIdentityName, null);
-		logInfo("Replaced username with database key for identity::" + identity.getKey());
+		log.info("Replaced username with database key for identity::" + identity.getKey());
 
 		// Finally mark user as deleted and we are done
 		identity = securityManager.saveIdentityStatus(identity, Identity.STATUS_DELETED, doer);
-		logInfo("Data of identity deleted and state of identity::" + identity.getKey() + " changed to 'deleted'");
+		log.info("Data of identity deleted and state of identity::" + identity.getKey() + " changed to 'deleted'");
 
 		dbInstance.commit();
-		logAudit("User-Deletion: Deleted identity::" + identity.getKey());
+		log.info(Tracing.M_AUDIT, "User-Deletion: Deleted identity::" + identity.getKey());
 		return true;
 	}	
 
@@ -320,7 +343,7 @@ public class UserDeletionManager extends BasicManager {
 		securityManager.setIdentityLastLogin(identity);
 		LifeCycleManager lifeCycleManagerForIdenitiy = LifeCycleManager.createInstanceFor(identity);
 		if (lifeCycleManagerForIdenitiy.hasLifeCycleEntry(SEND_DELETE_EMAIL_ACTION)) {
-			logAudit("User-Deletion: Remove from delete-list identity=" + identity);
+			log.info(Tracing.M_AUDIT, "User-Deletion: Remove from delete-list identity=" + identity);
 			lifeCycleManagerForIdenitiy.deleteTimestampFor(SEND_DELETE_EMAIL_ACTION);
 		}
 		return identity;
@@ -342,7 +365,7 @@ public class UserDeletionManager extends BasicManager {
 
 	private int getPropertyByName(String name, int defaultValue) {
 		List<Property> properties = PropertyManager.getInstance().findProperties(null, null, null, PROPERTY_CATEGORY, name);
-		if (properties.size() == 0) {
+		if (properties.isEmpty()) {
 			return defaultValue;
 		} else {
 			return properties.get(0).getLongValue().intValue();
@@ -360,11 +383,11 @@ public class UserDeletionManager extends BasicManager {
 	private void setProperty(String propertyName, int value) {
 		List<Property> properties = PropertyManager.getInstance().findProperties(null, null, null, PROPERTY_CATEGORY, propertyName);
 		Property property = null;
-		if (properties.size() == 0) {
+		if (properties.isEmpty()) {
 			property = PropertyManager.getInstance().createPropertyInstance(null, null, null, PROPERTY_CATEGORY, propertyName, null,  new Long(value), null, null);
 		} else {
 			property = properties.get(0);
-			property.setLongValue( new Long(value) );
+			property.setLongValue(Long.valueOf(value));
 		}
 		PropertyManager.getInstance().saveProperty(property);
 	}
