@@ -43,6 +43,7 @@ import org.olat.core.gui.control.Controller;
 import org.olat.core.gui.control.Event;
 import org.olat.core.gui.control.WindowControl;
 import org.olat.core.gui.control.controller.BasicController;
+import org.olat.core.util.UserSession;
 import org.olat.core.util.coordinate.CoordinatorManager;
 import org.olat.core.util.resource.OresHelper;
 import org.olat.core.util.vfs.QuotaManager;
@@ -74,6 +75,8 @@ public class CollaborationToolsSettingsController extends BasicController {
 	private final BusinessGroup businessGroup;
 	
 	@Autowired
+	private QuotaManager quotaManager;
+	@Autowired
 	private CalendarModule calendarModule;
 
 	/**
@@ -101,12 +104,14 @@ public class CollaborationToolsSettingsController extends BasicController {
 			vc_collabtools.contextPut("newsToolEnabled", Boolean.FALSE);
 		}
 		
-		if (ureq.getUserSession().getRoles().isOLATAdmin()) {
+		UserSession usess = ureq.getUserSession();
+		
+		if (usess.getRoles().isAdministrator() || usess.getRoles().isSystemAdmin()) {
 			vc_collabtools.contextPut("isOlatAdmin", Boolean.TRUE);
 			if(managed) {
-				quotaCtr = QuotaManager.getInstance().getQuotaViewInstance(ureq, getWindowControl(), collabTools.getFolderRelPath());
+				quotaCtr = quotaManager.getQuotaViewInstance(ureq, getWindowControl(), collabTools.getFolderRelPath());
 			} else {
-				quotaCtr = QuotaManager.getInstance().getQuotaEditorInstance(ureq, getWindowControl(), collabTools.getFolderRelPath());
+				quotaCtr = quotaManager.getQuotaEditorInstance(ureq, getWindowControl(), collabTools.getFolderRelPath(), true, false);
 			}
 			listenTo(quotaCtr);
 		} else {
@@ -135,7 +140,7 @@ public class CollaborationToolsSettingsController extends BasicController {
 		// update quota form: only show when enabled
 		if (collabTools.isToolEnabled(CollaborationTools.TOOL_FOLDER)) {
 			vc_collabtools.contextPut("folderToolEnabled", Boolean.TRUE);
-			if(ureq.getUserSession().getRoles().isOLATAdmin()) {
+			if(usess.getRoles().isAdministrator() || usess.getRoles().isSystemAdmin()) {
 				vc_collabtools.put("quota", quotaCtr.getInitialComponent());
 			}
 			vc_collabtools.contextPut("folderToolEnabled", Boolean.TRUE);
@@ -236,7 +241,7 @@ public class CollaborationToolsSettingsController extends BasicController {
 				folderForm.setEnabled(!managed);
 				listenTo(folderForm);
 				vc_collabtools.put("folderform", folderForm.getInitialComponent());
-				if (ureq.getUserSession().getRoles().isOLATAdmin()) {
+				if (ureq.getUserSession().getRoles().isAdministrator()) {
 					vc_collabtools.put("quota", quotaCtr.getInitialComponent());
 				}
 			} else {
@@ -249,13 +254,12 @@ public class CollaborationToolsSettingsController extends BasicController {
 			}
 			
 		} else if (source == calendarForm) {	
-			collabTools.saveCalendarAccess(new Long(calendarForm.getCalendarAccess()));
+			collabTools.saveCalendarAccess(Long.valueOf(calendarForm.getCalendarAccess()));
 			// notify calendar components to refresh their calendars
 			CoordinatorManager.getInstance().getCoordinator().getEventBus().fireEventToListenersOf(
-					new CalendarGUIModifiedEvent(), OresHelper.lookupType(CalendarManager.class)
-			);
+					new CalendarGUIModifiedEvent(), OresHelper.lookupType(CalendarManager.class));
 		} else if (source == folderForm) {
-			collabTools.saveFolderAccess(new Long(folderForm.getFolderAccess()));
+			collabTools.saveFolderAccess(Long.valueOf(folderForm.getFolderAccess()));
 		}
 	}
 
