@@ -48,7 +48,7 @@ import org.olat.core.CoreSpringFactory;
 import org.olat.core.gui.control.DispatchResult;
 import org.olat.core.id.Identity;
 import org.olat.core.logging.AssertException;
-import org.olat.core.logging.OLog;
+import org.apache.logging.log4j.Logger;
 import org.olat.core.logging.Tracing;
 import org.olat.core.util.UserSession;
 import org.olat.core.util.servlets.OlatUrlDecoder;
@@ -62,7 +62,7 @@ import org.olat.core.util.session.UserSessionManager;
  */
 public class UserRequestImpl implements UserRequest {
 	
-	private static final OLog log = Tracing.createLoggerFor(UserRequestImpl.class);
+	private static final Logger log = Tracing.createLoggerFor(UserRequestImpl.class);
 
 	/**
 	 * <code>PARAM_DELIM</code>
@@ -105,12 +105,13 @@ public class UserRequestImpl implements UserRequest {
 		this.uriPrefix = uriPrefix;
 		isValidDispatchURI = false;
 		userSessionMgr = CoreSpringFactory.getImpl(UserSessionManager.class);
-		params = new HashMap<String,String>(4);
+		params = new HashMap<>(4);
 		dispatchResult = new DispatchResult();
 		parseRequest(httpReq);
 		
 		requestTimestamp = new Date();
 		uuid = Integer.toString(count.incrementAndGet());
+		Tracing.setUuid(uuid);
 	}
 
 	@Override
@@ -168,6 +169,7 @@ public class UserRequestImpl implements UserRequest {
 	/**
 	 * @return HttpServletResponse
 	 */
+	@Override
 	public HttpServletResponse getHttpResp() {
 		return httpResp;
 	}
@@ -177,6 +179,7 @@ public class UserRequestImpl implements UserRequest {
 	 * 
 	 * @return Locale
 	 */
+	@Override
 	public Locale getLocale() {
 		return getUserSession().getLocale();
 	}
@@ -186,6 +189,7 @@ public class UserRequestImpl implements UserRequest {
 	 * 
 	 * @return Subject
 	 */
+	@Override
 	public Identity getIdentity() {
 		return getUserSession().getIdentity();
 	}
@@ -216,18 +220,18 @@ public class UserRequestImpl implements UserRequest {
 		String decodedUri = OlatUrlDecoder.getFullUri(hreq);
 
 		// log the http request headers, but do not parse the parameters (could destroy data for file upload)
-		if (log.isDebug()) {
+		if (log.isDebugEnabled()) {
 			StringBuilder sb = new StringBuilder("\nRequest Parameters:\n");
 			appendFormattedKeyValue(sb, "URI", hreq.getRequestURI());		
 			appendFormattedKeyValue(sb, "Protocol", hreq.getProtocol());
 			appendFormattedKeyValue(sb, "HTTP Method", hreq.getMethod());
 			appendFormattedKeyValue(sb, "Scheme", hreq.getScheme());
 			appendFormattedKeyValue(sb, "Server Name", hreq.getServerName());
-			appendFormattedKeyValue(sb, "Server Port", new Integer(hreq.getServerPort()));
+			appendFormattedKeyValue(sb, "Server Port", Integer.valueOf(hreq.getServerPort()));
 			appendFormattedKeyValue(sb, "Remote Addr", hreq.getRemoteAddr());
 			appendFormattedKeyValue(sb, "Remote Host", hreq.getRemoteHost());
 			appendFormattedKeyValue(sb, "Character Encoding", hreq.getCharacterEncoding());
-			appendFormattedKeyValue(sb, "Content Length", new Integer(hreq.getContentLength()));
+			appendFormattedKeyValue(sb, "Content Length", Integer.valueOf(hreq.getContentLength()));
 			appendFormattedKeyValue(sb, "Content Type", hreq.getContentType());
 			appendFormattedKeyValue(sb, "Locale", hreq.getLocale());
 			appendFormattedKeyValue(sb, "QueryString", hreq.getQueryString());
@@ -319,12 +323,6 @@ public class UserRequestImpl implements UserRequest {
 			// decode the "mode" token (ajax or standard)
 			mode = Integer.parseInt(st.nextToken());
 
-			/*
-			// business control path for bookmarking
-			// for parsing, it is easiest to have at least one char -> substring
-			businessControlPath = st.nextToken().substring(1);
-			*/
-			
 			// decode remaining module specific key/value params
 			while (st.hasMoreTokens()) { // hasMoreToken would return false if there
 				// isn't any token at all
