@@ -64,7 +64,7 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 		if(ftE.isMultiSelect()) {
 			// render as checkbox icon to minimize used space for header
 			String choice = translator.translate("table.header.choice");
-			target.append("<th><i class='o_icon o_icon_checkbox_checked o_icon-lg' title=\"").append(choice).append("\"> </i></th>");
+			target.append("<th class='o_multiselect'><i class='o_icon o_icon_checkbox_checked o_icon-lg' title=\"").append(choice).append("\"> </i></th>");
 		}
 		
 		int cols = columnModel.getColumnCount();
@@ -81,9 +81,17 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 	private void renderHeader(StringOutput sb, FlexiTableComponent ftC, FlexiColumnModel fcm, Translator translator) {
 		String header = getHeader(fcm, translator);
 		sb.append("<th");
-		// append sort key to make column width set via css
-		if (fcm.getSortKey() != null) {
-			sb.append(" class='o_col_").append(fcm.getSortKey()).append("'");	
+		if (fcm.getSortKey() != null || fcm.getHeaderAlignment() != null) {
+			sb.append(" class='");
+			// append sort key to make column width set via css
+			if (fcm.getSortKey() != null) {
+				sb.append(" o_col_").append(fcm.getSortKey());	
+			}
+			if (fcm.getHeaderAlignment() != null) {
+				String alignmentCssClass = getAlignmentCssClass(fcm.getHeaderAlignment());
+				sb.append(" ").append(alignmentCssClass);
+			}
+			sb.append("'");
 		}
 		sb.append(">");
 		// sort is not defined
@@ -98,7 +106,7 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 			if(orderBy != null && orderBy.length > 0) {
 				for(int i=orderBy.length; i-->0; ) {
 					if(sortKey.equals(orderBy[i].getKey())) {
-						asc = new Boolean(orderBy[i].isAsc());
+						asc = Boolean.valueOf(orderBy[i].isAsc());
 					}
 				}
 			}
@@ -127,7 +135,23 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 	
 	private String getHeader(FlexiColumnModel fcm, Translator translator) {
 		String header;
-		if(StringHelper.containsNonWhitespace(fcm.getHeaderLabel())) {
+		if(StringHelper.containsNonWhitespace(fcm.getIconHeader())) {
+			StringBuilder sb = new StringBuilder(64);
+			sb.append("<i class=\"").append(fcm.getIconHeader()).append("\"");
+			
+			String title = null;
+			if(StringHelper.containsNonWhitespace(fcm.getHeaderLabel())) {
+				title = fcm.getHeaderLabel();
+			} else {
+				title = translator.translate(fcm.getHeaderKey());
+			}
+			if(StringHelper.containsNonWhitespace(title)) {
+				sb.append(" title=\"").append(title).append("\"");
+			}
+			
+			sb.append("> </i>");
+			header = sb.toString();
+		} else if(StringHelper.containsNonWhitespace(fcm.getHeaderLabel())) {
 			header = fcm.getHeaderLabel();
 		} else {
 			header = translator.translate(fcm.getHeaderKey());
@@ -156,7 +180,7 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 		target.append(">");
 				
 		if(ftE.isMultiSelect()) {
-			target.append("<td>")
+			target.append("<td class='o_multiselect'>")
 			      .append("<input type='checkbox' name='tb_ms' value='").append(rowIdPrefix).append(row).append("'")
 			      .append(" onclick=\"javascript:")
 			      .append(FormJSHelper.getXHRFnCallFor(theForm, ftC.getFormDispatchId(), 1, false, false, false,
@@ -217,7 +241,7 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 		FlexiTableDataModel<?> dataModel = ftE.getTableDataModel();
 
 		int alignment = fcm.getAlignment();
-		String cssClass = (alignment == FlexiColumnModel.ALIGNMENT_LEFT ? "text-left" : (alignment == FlexiColumnModel.ALIGNMENT_RIGHT ? "text-right" : "text-center"));
+		String cssClass = getAlignmentCssClass(alignment);
 
 		target.append("<td class=\"").append(cssClass).append(" ")
 		  .append("o_dnd_label", ftE.getColumnIndexForDragAndDropLabel() == fcm.getColumnIndex())
@@ -249,7 +273,7 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 		}
 		target.append("</td>");
 	}
-	
+
 	@Override
 	protected void renderFooter(Renderer renderer, StringOutput target, FlexiTableComponent ftC,
 			URLBuilder ubu, Translator translator, RenderResult renderResult) {
@@ -283,7 +307,7 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 						target.append("</th>");
 						footerHeader = true;
 					} else {
-						String cssClass = (alignment == FlexiColumnModel.ALIGNMENT_LEFT ? "text-left" : (alignment == FlexiColumnModel.ALIGNMENT_RIGHT ? "text-right" : "text-center"));
+						String cssClass = getAlignmentCssClass(alignment);
 						target.append("<td class=\"").append(cssClass).append("\">");
 						fcm.getFooterCellRenderer().render(renderer, target, cellValue, 0, ftC, ubu, translator);
 						target.append("</td>");
@@ -292,5 +316,9 @@ class FlexiTableClassicRenderer extends AbstractFlexiTableRenderer implements Co
 			}
 			target.append("</tr>");
 		}
+	}
+
+	private String getAlignmentCssClass(int alignment) {
+		return alignment == FlexiColumnModel.ALIGNMENT_LEFT ? "text-left" : (alignment == FlexiColumnModel.ALIGNMENT_RIGHT ? "text-right" : "text-center");
 	}
 }
