@@ -169,7 +169,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		for(int i=dataModel.getTableColumnModel().getColumnCount(); i-->0; ) {
 			FlexiColumnModel col = dataModel.getTableColumnModel().getColumnModel(i);
 			if(col.isDefaultVisible()) {
-				enabledColumnIndex.add(new Integer(col.getColumnIndex()));
+				enabledColumnIndex.add(Integer.valueOf(col.getColumnIndex()));
 			}
 		}
 
@@ -607,7 +607,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 	
 	@Override
 	public void setExtendedFilterButton(String label, List<FlexiTableFilter> extendedFilters) {
-		if(StringHelper.containsNonWhitespace(label) && extendedFilters != null && extendedFilters.size() > 0) {
+		if(StringHelper.containsNonWhitespace(label) && extendedFilters != null && !extendedFilters.isEmpty()) {
 			this.extendedFilters = extendedFilters;
 			
 			String dispatchId = component.getDispatchID();
@@ -627,7 +627,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 	@Override
 	public List<FlexiTableFilter> getSelectedExtendedFilters() {
 		List<FlexiTableFilter> selectedFilters = new ArrayList<>();
-		if(extendedFilters != null && extendedFilters.size() > 0) {
+		if(extendedFilters != null && !extendedFilters.isEmpty()) {
 			for(FlexiTableFilter extendedFilter:extendedFilters) {
 				if(extendedFilter.isSelected()) {
 					selectedFilters.add(extendedFilter);
@@ -639,7 +639,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 	
 	@Override
 	public void setSelectedExtendedFilters(List<FlexiTableFilter> filters) {
-		if(extendedFilters != null && extendedFilters.size() > 0) {
+		if(extendedFilters != null && !extendedFilters.isEmpty()) {
 			for(FlexiTableFilter extendedFilter:extendedFilters) {
 				boolean selected = false;
 				for(FlexiTableFilter filter:filters) {
@@ -753,10 +753,12 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		this.selectedObj = selectedObj;
 	}
 
+	@Override
 	public FlexiTreeTableNode getRootCrumb() {
 		return rootCrumb;
 	}
 
+	@Override
 	public void setRootCrumb(FlexiTreeTableNode rootCrumb) {
 		this.rootCrumb = rootCrumb;
 	}
@@ -849,11 +851,6 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 	 */
 	@Override
 	public void evalFormRequest(UserRequest ureq) {
-		String[] selectedIndexArr = getRootForm().getRequestParameterValues("tb_ms");
-		if(selectedIndexArr != null) {
-			//setMultiSelectIndex(selectedIndexArr);
-		}
-
 		Form form = getRootForm();
 		String selectedIndex = form.getRequestParameter("rSelect");
 		String dispatchuri = form.getRequestParameter("dispatchuri");
@@ -870,6 +867,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		String treeTableOpen = form.getRequestParameter("tt-open");
 		String treeTableClose = form.getRequestParameter("tt-close");
 		String crumb = form.getRequestParameter("tt-crumb");
+		String openCloseAll = form.getRequestParameter("tt-openclose");
 		if("undefined".equals(dispatchuri)) {
 			evalSearchRequest(ureq);
 		} else if(StringHelper.containsNonWhitespace(checkbox)) {
@@ -911,9 +909,9 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		} else if(StringHelper.containsNonWhitespace(removeExtendedFilter)) {
 			removeExtendedFilter(ureq);
 		} else if(dispatchuri != null && StringHelper.containsNonWhitespace(filter)) {
-			doFilter(filter);
+			doFilter(ureq, filter);
 		} else if(StringHelper.containsNonWhitespace(removeFilter)) {
-			doFilter(null);
+			doFilter(ureq, null);
 		} else if(StringHelper.isLong(treeTableFocus)) {
 			doFocus(Integer.parseInt(treeTableFocus));
 		} else if(StringHelper.isLong(treeTableOpen)) {
@@ -922,11 +920,19 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			doClose(Integer.parseInt(treeTableClose));
 		} else if(StringHelper.containsNonWhitespace(crumb)) {
 			doCrumb(crumb);
+		} else if(StringHelper.containsNonWhitespace(openCloseAll)) {
+			if("openall".equals(openCloseAll)) {
+				doOpenAll();
+			} else if("closeall".equals(openCloseAll)) {
+				doCloseAll();
+			}
 		} else if(exportButton != null
 				&& exportButton.getFormDispatchId().equals(dispatchuri)) {
 			doExport(ureq);
 		} else if(dispatchuri != null && select != null && select.equals("checkall")) {
 			selectAll();
+		} else if(dispatchuri != null && select != null && select.equals("checkpage")) {
+			selectPage();
 		} else if(dispatchuri != null && select != null && select.equals("uncheckall")) {
 			doUnSelectAll();
 		} else if(customButton != null
@@ -945,7 +951,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			saveCustomSettings(ureq);
 			getRootForm().fireFormEvent(ureq, new FlexiTableRenderEvent(FlexiTableRenderEvent.CHANGE_RENDER_TYPE, this,
 					FlexiTableRendererType.classic, FormEvent.ONCLICK));
-		} else if(doSelect(ureq)) {
+		} else if(getFormDispatchId().equals(dispatchuri) && doSelect(ureq)) {
 			//do select
 		}
 	}
@@ -1002,7 +1008,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		} else if(searchFieldEl.getComponent() == source) {
 			if(event instanceof AutoCompleteEvent) {
 				AutoCompleteEvent ace = (AutoCompleteEvent)event;
-				doSearch(ureq, FlexiTableSearchEvent.QUICK_SEARCH_KEY_SELECTION, ace.getKey(), null);
+				doSearch(ureq, FlexiTableReduceEvent.QUICK_SEARCH_KEY_SELECTION, ace.getKey(), null);
 			}
 		}
 	}
@@ -1085,7 +1091,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		for(int i=dataModel.getRowCount(); i-->0; ) {
 			Object obj = dataModel.getObject(i);
 			if(obj != null && selectedObjects.contains(obj)) {
-				multiSelectedIndex.put(new Integer(i), obj);
+				multiSelectedIndex.put(Integer.valueOf(i), obj);
 			}
 		}
 		
@@ -1120,7 +1126,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		}
 	}
 	
-	private void doFilter(String filterKey) {
+	private void doFilter(UserRequest ureq, String filterKey) {
 		List<FlexiTableFilter> selectedFilters = new ArrayList<>();
 		if(filterKey == null) {
 			for(FlexiTableFilter filter:filters) {
@@ -1173,7 +1179,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			rowCount = -1;
 			currentPage = 0;
 			doUnSelectAll();
-			((FilterableFlexiTableModel)dataModel).filter(selectedFilters);
+			((FilterableFlexiTableModel)dataModel).filter(getQuickSearchString(), selectedFilters);
 		} else if(dataSource != null) {
 			rowCount = -1;
 			currentPage = 0;
@@ -1187,6 +1193,9 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			}
 		}
 		component.setDirty(true);
+		
+		getRootForm().fireFormEvent(ureq, new FlexiTableFilterEvent(FlexiTableReduceEvent.FILTER, this,
+				getQuickSearchString(), getSelectedFilters(), getSelectedExtendedFilters(), null, FormEvent.ONCLICK));
 	}
 	
 	private void removeExtendedFilter(UserRequest ureq) {
@@ -1214,7 +1223,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			}
 		}
 
-		getRootForm().fireFormEvent(ureq, new FlexiTableSearchEvent(FlexiTableSearchEvent.EXTENDED_FILTER, this,
+		getRootForm().fireFormEvent(ureq, new FlexiTableSearchEvent(FlexiTableReduceEvent.EXTENDED_FILTER, this,
 				getSearchText(), getSelectedFilters(), getSelectedExtendedFilters(), getConditionalQueries(), FormEvent.ONCLICK));
 	}
 	
@@ -1234,14 +1243,14 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 	private void doOpen(int row) {
 		if(dataModel instanceof FlexiTreeTableDataModel) {
 			((FlexiTreeTableDataModel<?>)dataModel).open(row);
-			reset(true, true, true);
+			resetInternComponents();
 		}
 	}
 	
 	private void doClose(int row) {
 		if(dataModel instanceof FlexiTreeTableDataModel) {
 			((FlexiTreeTableDataModel<?>)dataModel).close(row);
-			reset(true, true, true);
+			resetInternComponents();
 		}
 	}
 	
@@ -1259,7 +1268,21 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		}
 		if(dataModel instanceof FlexiTreeTableDataModel) {
 			((FlexiTreeTableDataModel<?>)dataModel).popBreadcrumb(crumb);
-			reset(true, true, true);
+			reset(false, true, true);
+		}
+	}
+	
+	private void doOpenAll() {
+		if(dataModel instanceof FlexiTreeTableDataModel) {
+			((FlexiTreeTableDataModel<?>)dataModel).openAll();
+			reset(false, true, true);
+		}
+	}
+	
+	private void doCloseAll() {
+		if(dataModel instanceof FlexiTreeTableDataModel) {
+			((FlexiTreeTableDataModel<?>)dataModel).closeAll();
+			resetInternComponents();
 		}
 	}
 	
@@ -1342,7 +1365,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			VisibleFlexiColumnsModel model = (VisibleFlexiColumnsModel)visibleColsChoice.getModel();
 			for(int i=model.getRowCount(); i-->0; ) {
 				FlexiColumnModel col = model.getObject(i);
-				if(visibleCols.contains(new Integer(i))) {
+				if(visibleCols.contains(Integer.valueOf(i))) {
 					enabledColumnIndex.add(col.getColumnIndex());
 				} else {
 					enabledColumnIndex.remove(col.getColumnIndex());
@@ -1358,7 +1381,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		for(int i=dataModel.getTableColumnModel().getColumnCount(); i-->0; ) {
 			FlexiColumnModel col = dataModel.getTableColumnModel().getColumnModel(i);
 			if(col.isDefaultVisible()) {
-				enabledColumnIndex.add(new Integer(col.getColumnIndex()));
+				enabledColumnIndex.add(Integer.valueOf(col.getColumnIndex()));
 			}
 		}
 		
@@ -1459,7 +1482,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			for(int i=colModel.getColumnCount(); i-->0; ) {
 				FlexiColumnModel col = colModel.getColumnModel(i);
 				if(columnKey.equals(col.getColumnKey())) {
-					index.add(new Integer(col.getColumnIndex()));
+					index.add(Integer.valueOf(col.getColumnIndex()));
 				}
 			}
 		}
@@ -1499,7 +1522,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			search = searchFieldEl.getValue();
 		}
 		List<String> condQueries = extendedSearchCtrl.getConditionalQueries();
-		doSearch(ureq, FlexiTableSearchEvent.SEARCH, search, condQueries);
+		doSearch(ureq, FlexiTableReduceEvent.SEARCH, search, condQueries);
 	}
 	
 	protected void evalSearchRequest(UserRequest ureq) {
@@ -1515,9 +1538,9 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		String search = searchFieldEl.getValue();
 
 		if(key != null) {
-			doSearch(ureq, FlexiTableSearchEvent.QUICK_SEARCH_KEY_SELECTION, key, null);
+			doSearch(ureq, FlexiTableReduceEvent.QUICK_SEARCH_KEY_SELECTION, key, null);
 		} else if(StringHelper.containsNonWhitespace(search)) {
-			doSearch(ureq, FlexiTableSearchEvent.QUICK_SEARCH, search, null);
+			doSearch(ureq, FlexiTableReduceEvent.QUICK_SEARCH, search, null);
 		} else {
 			resetSearch(ureq);
 		}
@@ -1546,7 +1569,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		}
 		if(StringHelper.containsNonWhitespace(search)) {
 			searchFieldEl.setValue(search);
-			doSearch(ureq, FlexiTableSearchEvent.QUICK_SEARCH, search, null);
+			doSearch(ureq, FlexiTableReduceEvent.QUICK_SEARCH, search, null);
 		}
 	}
 	
@@ -1561,9 +1584,28 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		int numOfRows = getRowCount();
 		for(int i=0; i<numOfRows;i++) {
 			Object objectRow = dataModel.getObject(i);
-			multiSelectedIndex.put(new Integer(i), objectRow);
+			multiSelectedIndex.put(Integer.valueOf(i), objectRow);
 		}
 		allSelectedNeedLoadOfWholeModel = true;
+	}
+	
+	@Override
+	public void selectPage() {
+		if(multiSelectedIndex != null) {
+			multiSelectedIndex.clear();
+		} else {
+			multiSelectedIndex = new HashMap<>();
+		}
+		
+		int firstRow = getFirstRow();
+		int maxRows = getMaxRows();
+		int rows = dataModel.getRowCount();
+		int lastRow = Math.min(rows, firstRow + maxRows);
+		for (int i = firstRow; i < lastRow; i++) {
+			Object objectRow = dataModel.getObject(i);
+			multiSelectedIndex.put(Integer.valueOf(i), objectRow);
+		}
+		allSelectedNeedLoadOfWholeModel = false;
 	}
 	
 	protected void doUnSelectAll() {
@@ -1655,7 +1697,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 
 	@Override
 	public boolean isMultiSelectedIndex(int index) {
-		return multiSelectedIndex != null && multiSelectedIndex.containsKey(new Integer(index));
+		return multiSelectedIndex != null && multiSelectedIndex.containsKey(Integer.valueOf(index));
 	}
 	
 	protected void toogleSelectIndex(String selection) {
@@ -1672,7 +1714,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		}
 		
 		try {
-			Integer row = new Integer(rowStr);
+			Integer row = Integer.valueOf(rowStr);
 			if(multiSelectedIndex.containsKey(row)) {
 				if(multiSelectedIndex.remove(row) != null && allSelectedNeedLoadOfWholeModel) {
 					allSelectedNeedLoadOfWholeModel = false;
@@ -1690,12 +1732,12 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 		if(multiSelectedIndex == null) {
 			multiSelectedIndex = new HashMap<>();
 		}
-		//selection format row_{formDispId}-{index}
+		// selection format row_{formDispId}-{index}
 		if(selections != null && selections.length > 0) {
 			int firstIndex = getPageSize() * getPage();
 			int lastResult = firstIndex + getPageSize() -1;
 			for(int i=firstIndex; i<lastResult; i++) {
-				multiSelectedIndex.remove(new Integer(i));
+				multiSelectedIndex.remove(Integer.valueOf(i));
 			}
 
 			for(String selection:selections) {	
@@ -1704,7 +1746,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 					String rowStr = selection.substring(index+1);
 					int row = Integer.parseInt(rowStr);
 					Object objectRow = dataModel.getObject(row);
-					multiSelectedIndex.put(new Integer(row), objectRow);
+					multiSelectedIndex.put(Integer.valueOf(row), objectRow);
 				}
 			}
 		}
@@ -1765,7 +1807,7 @@ public class FlexiTableElementImpl extends FormItemImpl implements FlexiTableEle
 			if(dataModel instanceof FilterableFlexiTableModel) {
 				if(isFilterEnabled()) {
 					List<FlexiTableFilter> filter = getSelectedFilters();
-					((FilterableFlexiTableModel)dataModel).filter(filter);
+					((FilterableFlexiTableModel)dataModel).filter(getQuickSearchString(), filter);
 				}
 			}
 			
