@@ -30,6 +30,7 @@ package org.olat.core.gui.exception;
 import java.util.Date;
 import java.util.List;
 
+import org.apache.logging.log4j.Logger;
 import org.olat.core.CoreSpringFactory;
 import org.olat.core.commons.services.csp.CSPModule;
 import org.olat.core.gui.UserRequest;
@@ -54,7 +55,6 @@ import org.olat.core.id.context.ContextEntry;
 import org.olat.core.id.context.HistoryPoint;
 import org.olat.core.logging.KnownIssueException;
 import org.olat.core.logging.OLATRuntimeException;
-import org.olat.core.logging.OLog;
 import org.olat.core.logging.Tracing;
 import org.olat.core.util.Formatter;
 import org.olat.core.util.StringHelper;
@@ -69,7 +69,7 @@ import org.olat.core.util.i18n.I18nManager;
  * @author Felix Jost
  */
 public class ExceptionWindowController extends DefaultChiefController {
-	private static final OLog log = Tracing.createLoggerFor(ExceptionWindowController.class);
+	private static final Logger log = Tracing.createLoggerFor(ExceptionWindowController.class);
 	private static final String VELOCITY_ROOT = Util.getPackageVelocityRoot(ExceptionWindowController.class);
 
 	private VelocityContainer msg;
@@ -99,7 +99,7 @@ public class ExceptionWindowController extends DefaultChiefController {
 		msg = new VelocityContainer("olatmain", VELOCITY_ROOT + "/exception_page.html", trans, this);
 
 		CSPModule securityModule = CoreSpringFactory.getImpl(CSPModule.class);
-		msg.contextPut("enforceTopFrame", new Boolean(securityModule.isForceTopFrame()));
+		msg.contextPut("enforceTopFrame", Boolean.valueOf(securityModule.isForceTopFrame()));
 		
 		// Disallow wrapping of divs around the panel and the main velocity page
 		// (since it contains the "<html><head... intro of the html page,
@@ -155,8 +155,6 @@ public class ExceptionWindowController extends DefaultChiefController {
 				Controller c = target.getLatestDispatchedController();
 				if (c != null) {
 					// can be null if the error occured in the component itself
-					// componentListenerInfo += c.toString();
-					//WindowControl control = c.getWindowControl();
 					// sorry, getting windowcontrol on a controller which does not have one (all should have one, legacy) throws an exception
 					try {
 						
@@ -179,9 +177,10 @@ public class ExceptionWindowController extends DefaultChiefController {
 			msg.contextPut("knownissuelink", kie.getJiraLink());
 		}
 		
-		// TODO: DB.getInstance().hasTransaction() TODO: log db transaction id if in
-		// transaction
-		long refNum = Tracing.logError("**RedScreen** "+o3e.getLogMsg() + " ::_::" + componentListenerInfo + " ::_::", o3e, o3e.getThrowingClazz());
+		Logger o3log = Tracing.createLoggerFor(o3e.getThrowingClazz());
+		String refNum = ureq.getUuid();
+		String componentListenerInfoFlat = componentListenerInfo.replace('\n', ' ').replace('\t', ' ');
+		o3log.error("**RedScreen** "+ o3e.getLogMsg() + " ::_::" + componentListenerInfoFlat + " ::_::", o3e);
 		// only if debug
 		if (Settings.isDebuging()) {
 			msg.contextPut("debug", Boolean.TRUE);
@@ -196,8 +195,8 @@ public class ExceptionWindowController extends DefaultChiefController {
 		msg.contextPut("username", curIdent == null? "n/a" : curIdent.getKey());
 		msg.contextPut("allowBackButton", Boolean.valueOf(allowBackButton));
 		msg.contextPut("detailedmessage", detailedmessage);
-		// Cluster NodeId + E-Nr
-		msg.contextPut("errnum", Settings.getNodeInfo() + "-E"+ refNum);
+		// Cluster request reference number
+		msg.contextPut("errnum", "I" + refNum + "-J");
 		msg.contextPut("supportaddress", WebappHelper.getMailConfig("mailError"));
 		msg.contextPut("time", formatter.formatDateAndTime(new Date()));
 
@@ -268,19 +267,13 @@ public class ExceptionWindowController extends DefaultChiefController {
 		return false;
 	}
 
-	/**
-	 * @see org.olat.core.gui.control.DefaultController#event(org.olat.core.gui.UserRequest,
-	 *      org.olat.core.gui.components.Component, org.olat.core.gui.control.Event)
-	 */
+	@Override
 	public void event(UserRequest ureq, Component source, Event event) {
 	//
 	}
 
-	/**
-	 * @see org.olat.core.gui.control.DefaultController#doDispose(boolean)
-	 */
+	@Override
 	protected void doDispose() {
 		// nothing to do here
 	}
-
 }
